maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:32: error: ':' expected but ')' found.
def recurs (x:Int,y:Int,num){   // numerote tout
                           ^JediEscaper:48: error: identifier expected but '}' found.
}
^